feat: implement anarchy mobility, defense, combat utilities and survival modules